write about pandoc

--- a/html/intro/index.html
+++ b/html/intro/index.html
@@ -545,7 +545,8 @@ NO</code></pre>
 <h2 id="c関連">C++関連</h2>
 <ul>
 <li><a href="http://www.geocities.jp/ky_webid/cpp/library/index.html">C++編(標準ライブラリ) トップページ</a><br /></li>
-<li><a href="http://www7b.biglobe.ne.jp/~robe/cpphtml/">ロベールのC++教室</a></li>
+<li><a href="http://www7b.biglobe.ne.jp/~robe/cpphtml/">ロベールのC++教室</a><br /></li>
+<li><a href="http://www.geocities.jp/ky_webid/cpp/language/index.html">Programing Place(C++編)</a></li>
 </ul>
 <h2 id="関連書籍">関連書籍</h2>
 <ul>
