--- a/html/intro/index.html
+++ b/html/intro/index.html
@@ -337,8 +337,7 @@ code > span.er { font-weight: bold; }
 <ul>
 <li><a href="http://www.geocities.jp/ky_webid/cpp/language/index.html">Programing Place(C++編)</a><br /></li>
 <li><a href="http://www7b.biglobe.ne.jp/~robe/cpphtml/">ロベールのC++教室</a><br /></li>
-<li><a href="http://www.alc.co.jp/">英語のアルク</a><br /></li>
-<li><a href="./win.html">競技プログラミングのためのWindows入門</a></li>
+<li><a href="http://www.alc.co.jp/">英語のアルク</a></li>
 </ul>
 <h1 id="どこから始めるの">どこから始めるの？</h1>
 <h2 id="問題サイトの選択">問題サイトの選択</h2>
