--- a/html/index.html
+++ b/html/index.html
@@ -296,9 +296,16 @@
   </style>
 </head>
 <body>
-<h1 id="pushl.netcompro-へようこそ">Pushl.net/compro へようこそ</h1>
+<nav id="TOC">
+<ul>
+<li><a href="#pushl.netcompro-へようこそ">Pushl.net/compro へようこそ</a><ul>
+<li><a href="#コンテンツ">コンテンツ</a></li>
+</ul></li>
+</ul>
+</nav>
+<h1 id="pushl.netcompro-へようこそ"><a href="#pushl.netcompro-へようこそ">Pushl.net/compro へようこそ</a></h1>
 <p>ここは競技プログラミング関係を纏めておくサイトです。<br />ブログでは流れていってしまう為、それを留めておこうと考えています。</p>
-<h2 id="コンテンツ">コンテンツ</h2>
+<h2 id="コンテンツ"><a href="#コンテンツ">コンテンツ</a></h2>
 <ul>
 <li><a href="./intro">競技プログラミング入門</a><br /></li>
 <li><a href="./cpp">競技プログラミングの為のC++入門</a></li>
